# nostr-relay-dashboard

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE_MANIFEST(2).txt  RELEASE_MANIFEST.txt  dashboard.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
deploy/: Caddyfile.dev  Caddyfile.example  Caddyfile.prod  nrd.service
deploy/caddy/: Caddyfile.LOCAL_ONLY.example  Caddyfile.PUBLIC_HTTPS.example  Caddyfile.TAILSCALE_ONLY.example
docs/: MIGRATION_TO_DOCKER.md
migrations/: 0002_add_upstream_relays_and_monitored_npubs.sql  001_initial.sql
public/: index.html
scripts/: dashboard.db  nrd-install-local-only.sh  nrd-install-public.sh  nrd-install-tailscale-only.sh
src/: api.rs  db.rs  gui.rs  lib.rs  main.rs  nostr_types.rs  relay.rs  routes.rs  sync.rs
